--- a/experiments/outputs/difficulty_table.tex
+++ b/experiments/outputs/difficulty_table.tex
@@ -3,16 +3,16 @@
 \tiny
 \begin{tabular}{lccccccccccccccc} 
 \toprule
-        & & \multicolumn{2}{c}{$\lambda={0}$}     & & \multicolumn{2}{c}{$\lambda={0.001}$}     & & \multicolumn{2}{c}{$\lambda={0.01}$}     & & \multicolumn{2}{c}{$\lambda={0.05}$}     & & \multicolumn{2}{c}{$\lambda={0.1}$}     & & \multicolumn{2}{c}{$\lambda={0.2}$}     & & \multicolumn{2}{c}{$\lambda={1}$}    \\ 
+       &  & \multicolumn{2}{c}{$\lambda={0}$}     & \multicolumn{2}{c}{$\lambda={0.001}$}     & \multicolumn{2}{c}{$\lambda={0.01}$}     & \multicolumn{2}{c}{$\lambda={0.05}$}     & \multicolumn{2}{c}{$\lambda={0.1}$}     & \multicolumn{2}{c}{$\lambda={0.2}$}     & \multicolumn{2}{c}{$\lambda={1}$}    \\ 
          \cmidrule(r){3-4}     \cmidrule(r){5-6}     \cmidrule(r){7-8}     \cmidrule(r){9-10}     \cmidrule(r){11-12}     \cmidrule(r){13-14}     \cmidrule(r){15-16}    
 difficulty & count & cvg & sz    & cvg & sz    & cvg & sz    & cvg & sz    & cvg & sz    & cvg & sz    & cvg & sz    \\ 
 \midrule 
-1      & 109651  & 0.95 & 5.2   & 0.95 & 4.0   & 0.96 & 2.6   & 0.97 & 2.1   & 0.97 & 2.0   & 0.98 & 2.0   & 0.98 & 1.9  \\ 
-2 to 3      & 18115  & 0.78 & 15.7   & 0.79 & 10.6   & 0.81 & 6.0   & 0.83 & 4.2   & 0.84 & 3.9   & 0.86 & 3.7   & 0.85 & 3.5  \\ 
-4 to 6      & 4935  & 0.68 & 31.7   & 0.71 & 19.6   & 0.74 & 10.0   & 0.70 & 6.0   & 0.71 & 5.3   & 0.70 & 4.7   & 0.59 & 4.3  \\ 
-6 to 10      & 3430  & 0.62 & 37.8   & 0.66 & 22.7   & 0.62 & 11.3   & 0.41 & 6.4   & 0.28 & 5.4   & 0.14 & 5.0   & 0.00 & 4.5  \\ 
-10 to 100      & 4764  & 0.56 & 57.2   & 0.54 & 35.5   & 0.30 & 14.8   & 0.04 & 7.7   & 0.00 & 6.4   & 0.00 & 5.4   & 0.00 & 4.6  \\ 
-100 to 1000      & 544  & 0.23 & 95.5   & 0.01 & 59.9   & 0.00 & 18.8   & 0.00 & 9.1   & 0.00 & 7.0   & 0.00 & 5.9   & 0.00 & 4.7  \\ 
+1      & 15668  & 0.95 & 5.2   & 0.95 & 3.8   & 0.96 & 2.5   & 0.97 & 2.1   & 0.97 & 2.0   & 0.98 & 2.0   & 0.98 & 2.0  \\ 
+2 to 3      & 2578  & 0.78 & 15.7   & 0.78 & 10.5   & 0.80 & 6.0   & 0.83 & 4.3   & 0.84 & 3.9   & 0.85 & 3.7   & 0.86 & 3.6  \\ 
+4 to 6      & 717  & 0.68 & 31.7   & 0.68 & 19.7   & 0.70 & 9.7   & 0.71 & 6.1   & 0.71 & 5.3   & 0.70 & 4.8   & 0.64 & 4.4  \\ 
+7 to 10      & 334  & 0.63 & 41.0   & 0.63 & 24.9   & 0.60 & 11.6   & 0.39 & 6.9   & 0.22 & 5.7   & 0.06 & 5.1   & 0.00 & 4.5  \\ 
+11 to 100      & 622  & 0.55 & 57.8   & 0.51 & 34.1   & 0.26 & 14.7   & 0.02 & 7.9   & 0.00 & 6.4   & 0.00 & 5.4   & 0.00 & 4.6  \\ 
+101 to 1000      & 81  & 0.23 & 96.7   & 0.00 & 51.6   & 0.00 & 19.1   & 0.00 & 9.1   & 0.00 & 7.1   & 0.00 & 5.8   & 0.00 & 4.7  \\ 
 \bottomrule
 \end{tabular}
 \caption{\textbf{Coverage and size conditional on difficulty.} We report coverage and size of \raps\ sets for ResNet-152 for $k_{reg}=5$ and varying $\lambda$.}
