--- a/example.ipynb
+++ b/example.ipynb
@@ -6,7 +6,6 @@
       "name": "example.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN+1U8pbUtwEJQCclp5uCfP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16,7 +15,7 @@
     "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "b64321aee38c40b28edf834724c2e4ff": {
+        "467f08ebb8874be3b5d3b125e4af91bc": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "state": {
@@ -28,15 +27,15 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_d7bf1b98ca984e3297105b9d066eba8d",
+            "layout": "IPY_MODEL_963dcdb3afdc4b70b83be33c1baa10a7",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_01901dea30ea40a7bb6b154cc7c0b694",
-              "IPY_MODEL_0be02251348d409fb28f72bb2c7f148a"
+              "IPY_MODEL_8ecf58f6b74f48799c4e5db70596879b",
+              "IPY_MODEL_d6f224aa12f54ee190bffa5bfb3c8a26"
             ]
           }
         },
-        "d7bf1b98ca984e3297105b9d066eba8d": {
+        "963dcdb3afdc4b70b83be33c1baa10a7": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -87,12 +86,12 @@
             "left": null
           }
         },
-        "01901dea30ea40a7bb6b154cc7c0b694": {
+        "8ecf58f6b74f48799c4e5db70596879b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "state": {
             "_view_name": "ProgressView",
-            "style": "IPY_MODEL_c218e8d6619c43f0991b0682b4b74a13",
+            "style": "IPY_MODEL_af85d7e310a243efbd7c09e14961c12d",
             "_dom_classes": [],
             "description": "100%",
             "_model_name": "FloatProgressModel",
@@ -107,30 +106,30 @@
             "min": 0,
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_ba391023a404413db7bef6c0828cba43"
+            "layout": "IPY_MODEL_478d80d6029047b59b5a3149789412b0"
           }
         },
-        "0be02251348d409fb28f72bb2c7f148a": {
+        "d6f224aa12f54ee190bffa5bfb3c8a26": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "state": {
             "_view_name": "HTMLView",
-            "style": "IPY_MODEL_ca19b0fc2c7a4e5ca89e416cd077dd13",
+            "style": "IPY_MODEL_fa093c1c67dd463d9fd2ca3079fe51aa",
             "_dom_classes": [],
             "description": "",
             "_model_name": "HTMLModel",
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 230M/230M [00:13&lt;00:00, 17.8MB/s]",
+            "value": " 230M/230M [00:12&lt;00:00, 19.3MB/s]",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_1440013fe2374c8fb50e3ff4fd4255ab"
+            "layout": "IPY_MODEL_7e629cce3237495483170c7cbdf545f5"
           }
         },
-        "c218e8d6619c43f0991b0682b4b74a13": {
+        "af85d7e310a243efbd7c09e14961c12d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "state": {
@@ -145,7 +144,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "ba391023a404413db7bef6c0828cba43": {
+        "478d80d6029047b59b5a3149789412b0": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -196,7 +195,7 @@
             "left": null
           }
         },
-        "ca19b0fc2c7a4e5ca89e416cd077dd13": {
+        "fa093c1c67dd463d9fd2ca3079fe51aa": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "state": {
@@ -210,7 +209,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "1440013fe2374c8fb50e3ff4fd4255ab": {
+        "7e629cce3237495483170c7cbdf545f5": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -297,26 +296,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "oIiBD-pFVdkD",
-        "outputId": "84981736-b120-4172-f4a6-895b6c6fbb76",
+        "outputId": "81927688-c826-4f00-a8ca-9af052d07d92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 229,
           "referenced_widgets": [
-            "b64321aee38c40b28edf834724c2e4ff",
-            "d7bf1b98ca984e3297105b9d066eba8d",
-            "01901dea30ea40a7bb6b154cc7c0b694",
-            "0be02251348d409fb28f72bb2c7f148a",
-            "c218e8d6619c43f0991b0682b4b74a13",
-            "ba391023a404413db7bef6c0828cba43",
-            "ca19b0fc2c7a4e5ca89e416cd077dd13",
-            "1440013fe2374c8fb50e3ff4fd4255ab"
+            "467f08ebb8874be3b5d3b125e4af91bc",
+            "963dcdb3afdc4b70b83be33c1baa10a7",
+            "8ecf58f6b74f48799c4e5db70596879b",
+            "d6f224aa12f54ee190bffa5bfb3c8a26",
+            "af85d7e310a243efbd7c09e14961c12d",
+            "478d80d6029047b59b5a3149789412b0",
+            "fa093c1c67dd463d9fd2ca3079fe51aa",
+            "7e629cce3237495483170c7cbdf545f5"
           ]
         }
       },
       "source": [
         "!rm -r conformal_classification\n",
-        "u = 'YOUR_USERNAME_GOES_HERE'; p = 'YOUR_PASSWORD_GOES_HERE';\n",
-        "!git clone https://$u:$p@github.com/$u/conformal_classification.git\n",
+        "!git clone https://github.com/aangelopoulos/conformal_classification.git\n",
         "import os, sys, inspect\n",
         "sys.path.insert(1, os.path.join(sys.path[0], './conformal_classification/'))\n",
         "\n",
@@ -358,19 +356,19 @@
         "model = torchvision.models.resnet152(pretrained=True,progress=True).cuda()\n",
         "_ = model.eval()"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "rm: cannot remove 'conformal_classification': No such file or directory\n",
             "Cloning into 'conformal_classification'...\n",
-            "remote: Enumerating objects: 19, done.\u001b[K\n",
-            "remote: Counting objects: 100% (19/19), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (19/19), done.\u001b[K\n",
-            "remote: Total 346 (delta 7), reused 0 (delta 0), pack-reused 327\u001b[K\n",
-            "Receiving objects: 100% (346/346), 10.83 MiB | 11.54 MiB/s, done.\n",
-            "Resolving deltas: 100% (215/215), done.\n"
+            "remote: Enumerating objects: 140, done.\u001b[K\n",
+            "remote: Counting objects: 100% (140/140), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (125/125), done.\u001b[K\n",
+            "remote: Total 450 (delta 31), reused 113 (delta 15), pack-reused 310\u001b[K\n",
+            "Receiving objects: 100% (450/450), 2.68 MiB | 16.24 MiB/s, done.\n",
+            "Resolving deltas: 100% (238/238), done.\n"
           ],
           "name": "stdout"
         },
@@ -385,7 +383,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b64321aee38c40b28edf834724c2e4ff",
+              "model_id": "467f08ebb8874be3b5d3b125e4af91bc",
               "version_minor": 0,
               "version_major": 2
             },
