--- a/experiments/outputs/LAC_difficulty_table.tex
+++ b/experiments/outputs/LAC_difficulty_table.tex
@@ -13,6 +13,6 @@ difficulty & count & cvg & sz \\
 101 to 1000      & 81 & 0.00 & 2.4  \\ 
 \bottomrule
 \end{tabular}
-\caption{\textbf{Coverage and size conditional on difficulty.} We report coverage and size of the Lei/Wasserman sets for ResNet-152.}
+\caption{\textbf{Coverage and size conditional on difficulty.} We report coverage and size of the LAC sets for ResNet-152.}
 \label{table:lei-wasserman-difficulty}
 \end{table}
