--- a/experiments/outputs/table9_0_1.tex
+++ b/experiments/outputs/table9_0_1.tex
@@ -5,28 +5,19 @@
 \toprule 
  & \multicolumn{2}{c}{Accuracy}  & \multicolumn{5}{c}{Coverage} & \multicolumn{5}{c}{Size} \\ 
 \cmidrule(r){2-3}  \cmidrule(r){4-8}  \cmidrule(r){9-13} 
-Model & Top-1 & Top-5 & Top K & Naive & APS & RAPS & Lei/Wasserman & Top K & Naive & APS & RAPS & Lei/Wasserman \\ 
+Model & Top-1 & Top-5 & Top K & Naive & APS & RAPS & LAC & Top K & Naive & APS & RAPS & LAC \\ 
 \midrule 
- ResNeXt101 &  0.793 &  0.945 & 0.9 & 0.889 & 0.9 & 0.9 &  0.9 & 2.42 & 17.2 & 19.9 & 2.01 \\ 
- 1.65 \\ 
- ResNet152 &  0.783 &  0.941 & 0.9 & 0.894 & 0.9 & 0.9 &  0.9 & 2.64 & 9.68 & 10.4 & 2.09 \\ 
- 1.76 \\ 
- ResNet101 &  0.774 &  0.936 & 0.9 & 0.895 & 0.9 & 0.9 &  0.9 & 2.83 & 10.0 & 10.8 & 2.25 \\ 
- 1.87 \\ 
- ResNet50 &  0.761 &  0.929 & 0.899 & 0.896 & 0.9 & 0.9 &  0.9 & 3.13 & 11.7 & 12.3 & 2.55 \\ 
- 2.05 \\ 
- ResNet18 &  0.698 &  0.891 & 0.9 & 0.895 & 0.9 & 0.9 &  0.9 & 5.74 & 15.3 & 16.1 & 4.38 \\ 
- 3.64 \\ 
- DenseNet161 &  0.771 &  0.936 & 0.9 & 0.894 & 0.9 & 0.9 &  0.9 & 2.84 & 11.2 & 12.0 & 2.29 \\ 
- 1.9 \\ 
- VGG16 &  0.716 &  0.904 & 0.9 & 0.896 & 0.901 & 0.9 &  0.9 & 4.75 & 13.4 & 14.1 & 3.54 \\ 
- 2.99 \\ 
- Inception &  0.695 &  0.886 & 0.899 & 0.884 & 0.9 & 0.899 &  0.9 & 6.27 & 74.8 & 88.8 & 5.24 \\ 
- 4.05 \\ 
- ShuffleNet &  0.694 &  0.883 & 0.9 & 0.892 & 0.9 & 0.899 &  0.9 & 6.45 & 28.8 & 32.1 & 5.01 \\ 
- 4.14 \\ 
+ ResNeXt101 &  0.793 &  0.945 & 0.9 & 0.889 & 0.9 & 0.9 & 0.9 & 2.42 & 17.2 & 19.9 & 2.01 & 1.65 \\ 
+ ResNet152 &  0.783 &  0.941 & 0.9 & 0.894 & 0.9 & 0.9 & 0.9 & 2.64 & 9.68 & 10.4 & 2.09 & 1.76 \\ 
+ ResNet101 &  0.774 &  0.936 & 0.9 & 0.895 & 0.9 & 0.9 & 0.9 & 2.83 & 10.0 & 10.8 & 2.25 & 1.87 \\ 
+ ResNet50 &  0.761 &  0.929 & 0.899 & 0.896 & 0.9 & 0.9 & 0.9 & 3.13 & 11.7 & 12.3 & 2.55 & 2.05 \\ 
+ ResNet18 &  0.698 &  0.891 & 0.9 & 0.895 & 0.9 & 0.9 & 0.9 & 5.74 & 15.3 & 16.1 & 4.38 & 3.64 \\ 
+ DenseNet161 &  0.771 &  0.936 & 0.9 & 0.894 & 0.9 & 0.9 & 0.9 & 2.84 & 11.2 & 12.0 & 2.29 & 1.9 \\ 
+ VGG16 &  0.716 &  0.904 & 0.9 & 0.896 & 0.901 & 0.9 & 0.9 & 4.75 & 13.4 & 14.1 & 3.54 & 3.0 \\ 
+ Inception &  0.695 &  0.886 & 0.899 & 0.884 & 0.9 & 0.899 & 0.9 & 6.27 & 74.8 & 88.8 & 5.24 & 4.06 \\ 
+ ShuffleNet &  0.694 &  0.883 & 0.9 & 0.892 & 0.9 & 0.899 & 0.9 & 6.45 & 28.8 & 32.1 & 5.01 & 4.14 \\ 
 \bottomrule 
 \end{tabular} 
-\caption{\textbf{Results on Imagenet-Val.} We report coverage and size of the optimal, randomized fixed sets, \naive, \aps,\ \raps\ , and the sets from Lei and Wasserman for nine different Imagenet classifiers. The median-of-means for each column is reported over 100 different trials at the 10\% level. See Section~\ref{subsec:imagenet-val} for full details.} 
+\caption{\textbf{Results on Imagenet-Val.} We report coverage and size of the optimal, randomized fixed sets, \naive, \aps,\ \raps\ , and the LAC sets or nine different Imagenet classifiers. The median-of-means for each column is reported over 100 different trials at the 10\% level. See Section~\ref{subsec:imagenet-val} for full details.} 
 \label{table:imagenet-val-lei-wasserman} 
 \end{table} 
